--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>G3 Architects</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="work-sans-font">
     <header>
-
+<h3>Gr architects</h3>
     </header>
 
     <main>
