--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
             </div>
 
             <div class="our-features">
-                <h3 class="section-title"><span id="quick-list" class="text-light-grey">Quick list</span> <span >of Our</span> <span class="text-primary">Features</span></h3>
-                <p class="feature-description text-light-grey">There are many variations of passages of Lorem Ipsum available, but the
+                <h3 class="section-title"><span id="quick-list" class="text-light-grey">Quick list</span> <span>of
+                        Our</span> <span class="text-primary">Features</span></h3>
+                <p class="feature-description text-light-grey">There are many variations of passages of Lorem Ipsum
+                    available, but the
                     majority have suffered alteration in some form, by injected humour, or randomised words which don't
                     look even</p>
                 <button class="btn-primary">Explore More</button>
@@ -58,38 +60,61 @@
 
         <!-- features will enjoy -->
         <section>
-<h3 class="section-title">Features you will love & enjoy</h3>
-<p class="text-light-grey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>        
-</section>
+            <h3 class="section-title">Features you will love & enjoy</h3>
+            <p class="text-light-grey">There are many variations of passages of Lorem Ipsum available, but the majority
+                have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+        </section>
 
         <!-- some fact -->
-         <section class="some-facts">
-<h3 class="section-title">Some Facts</h3>
-<p class="text-light-grey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        <section class="some-facts">
+            <h3 class="section-title">Some Facts</h3>
+            <p class="text-light-grey fact-description">There are many variations of passages of Lorem Ipsum available, but the majority
+                have suffered alteration.</p>
 
-<div class="facts-container">
-    <div class="fact">
-        <img src="images/icons/ribon.png" alt="" class="fact-icon">
-        <h4 class="fact-number">54</h4>
-        <h5 class="fact-name">Awards Winnings</h5>
-    </div>
-    <div class="fact">
-        <img src="images/icons/projects.png" alt="" class="fact-icon">
-        <h4 class="fact-number">1458</h4>
-        <h5 class="fact-name">Project Finished</h5>
-    </div>
-    <div class="fact">
-        <img src="images/icons/customers.png" alt="" class="fact-icon">
-        <h4 class="fact-number">590</h4>
-        <h5 class="fact-name">Clients Worked</h5>
-    </div>
-    <div class="fact">
-        <img src="images/icons/email.png" alt="" class="fact-icon">
-        <h4 class="fact-number">22578</h4>
-        <h5 class="fact-name">Email Send</h5>
-    </div>
-</div>
-         </section>
+            <div class="facts-container">
+                <div class="fact-card flex">
+                    <div>
+                        <img src="images/icons/ribon.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">54</h4>
+                        <h5 class="fact-name text-light-grey">Awards Winnings</h5>
+                    </div>
+                </div>
+                <div class="fact-card flex">
+                    <div>
+                        <img src="images/icons/projects.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">1458</h4>
+                        <h5 class="fact-name text-light-grey">Project Finished</h5>
+                    </div>
+                </div>
+                <div class="fact-card flex">
+                    <div><img src="images/icons/customers.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">590</h4>
+                        <h5 class="fact-name text-light-grey">Clients Worked</h5>
+                    </div>
+                </div>
+                <div class="fact-card flex">
+                    <div> <img src="images/icons/email.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">22578</h4>
+                        <h5 class="fact-name text-light-grey">Email Send</h5>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="sposor-section">
+            <div class="sponsor-info">
+                <h3 class="sponsor-title">Our Sponspors</h3>
+                <p class="text-light-grey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+
+            <div class="sponsor-companies">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+        </section>
     </main>
 
     <footer>
