added features card container

--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
             </div>
         </section>
 
-
         <!-- features will enjoy -->
         <section>
             <h3 class="section-title">Features you will love & enjoy</h3>
@@ -65,10 +64,53 @@
                 have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
         </section>
 
+        <!--features you will love  -->
+        <section class="features flex">
+            <div>
+                <h3 class="section-title" id="feature-title">Features you will <br> love & enjoy</h3>
+                <p class="text-light-grey">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
+
+                <!-- feature card container -->
+
+                <div class="feature-card">
+                    <h4 class="feature-card-title">Dexktop & Mobile Version</h4>
+                    <p class="text-light-grey">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-card-title">Drag & Drop Builder</h4>
+                    <p class="text-light-grey">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-card-title">Awesome Modern Design</h4>
+                    <p class="text-light-grey">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-card-title">Super Easy to Edit</h4>
+                    <p class="text-light-grey">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+
+            </div>
+
+            <div>
+                <img src="images/architect.png" alt="">
+                <button id="experience-badge" class="btn-primary">
+                    <span id="experience-year">10+ Year</span>
+                    <br>
+                    <span id="">Experience</span></button>
+            </div>
+        </section>
+
         <!-- some fact -->
         <section class="some-facts">
             <h3 class="section-title">Some Facts</h3>
-            <p class="text-light-grey fact-description">There are many variations of passages of Lorem Ipsum available, but the majority
+            <p class="text-light-grey fact-description">There are many variations of passages of Lorem Ipsum available,
+                but the majority
                 have suffered alteration.</p>
 
             <div class="facts-container">
@@ -101,10 +143,13 @@
             </div>
         </section>
 
+
+        <!-- sponsor section -->
         <section class="sposor-section">
             <div class="sponsor-info">
                 <h3 class="sponsor-title">Our Sponspors</h3>
-                <p class="text-light-grey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                <p class="text-light-grey">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration.</p>
             </div>
 
             <div class="sponsor-companies">
