--- a/index.html
+++ b/index.html
@@ -57,13 +57,6 @@
             </div>
         </section>
 
-        <!-- features will enjoy -->
-        <section>
-            <h3 class="section-title">Features you will love & enjoy</h3>
-            <p class="text-light-grey">There are many variations of passages of Lorem Ipsum available, but the majority
-                have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-        </section>
-
         <!--features you will love  -->
         <section class="features flex">
             <div>
@@ -97,7 +90,7 @@
 
             </div>
 
-            <div>
+            <div class="featured-architect">
                 <img src="images/architect.png" alt="">
                 <button id="experience-badge" class="btn-primary">
                     <span id="experience-year">10+ Year</span>
